<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/tablayoutToMe"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--üst taraftaki layoutta isimler gözükmüyor-->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/viewpagerToMe" >

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/colorPrimary"
            app:tabIndicator="@color/lightGrey"
            app:tabSelectedTextColor="@color/lightGrey"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabTextColor="@color/lightGrey"
            android:id="@+id/tabLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatsToMe" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statusToMe" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callsToMe" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>




</LinearLayout>